clusters/aevy-kubernetes-aa-1-fef25/hellowo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellowo
  namespace: simple-k8s
  labels:
    app: hellowo
    app.kubernetes.io/managed-by: simple-k8s
spec:
  selector:
    matchLabels:
      app: hellowo
  template:
    metadata:
      labels:
        app: hellowo
        app.kubernetes.io/managed-by: simple-k8s
    spec:
      containers:
        - name: hellowo
          image: nginxdemos/hello:0.4
          ports:
            - containerPort: 80
          env: []
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: hellowo
  namespace: simple-k8s
  labels:
    app: hellowo
    app.kubernetes.io/managed-by: simple-k8s
spec:
  selector:
    app: hellowo
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellowo
  namespace: simple-k8s
  labels:
    app: hellowo
    app.kubernetes.io/managed-by: simple-k8s
spec:
  rules:
    - host: hello.aevy.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hellowo
                port:
                  number: 80
